<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".ui.weather.current.CurrentWeatherFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_city_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_city_name"
            android:inputType="textShortMessage" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_btn_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_temperature_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_25_0_c"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textColor="#0E0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_condition_current" />

    <TextView
        android:id="@+id/textView_condition_current"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName|textCapWords"
        android:text="@string/clouds_sunshine"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toTopOf="@+id/textView_temperature_current"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_condition_icon_current_layout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageView_condition_icon_current_layout"
        android:layout_width="181dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_city_name_current">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_background" />

        <ImageView
            android:id="@+id/imageView_condition_icon_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_city_name_current"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView_min_max_temperature_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/min_24_2_c_max_25_5_c"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_temperature_current"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/date_to_show_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/date_22_aug_2020"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_btn_current" />

    <TextView
        android:id="@+id/textView_city_name_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/city"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#090909"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_to_show_current" />


</androidx.constraintlayout.widget.ConstraintLayout>